--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,125 @@ yarn-error.*
 
 # typescript
 *.tsbuildinfo
+
+# ====== Added More=====
+
+# General
+node_modules/
+.babelrc
+*.log
+*.tmp
+*.lock
+
+# Expo specific
+.expo/
+.expo-shared/
+
+# Android specific
+android/app/build/
+android/.gradle/
+android/.idea/
+android/local.properties
+android/.settings/
+android/build/
+android/app/src/main/assets/shell-app.bundle
+android/app/src/main/assets/shell-app.bundle.meta
+android/app/src/main/assets/packager-info.json
+
+# iOS specific
+ios/build/
+ios/Pods/
+ios/Podfile.lock
+ios/DerivedData/
+ios/.DS_Store
+ios/*.xcworkspace
+ios/*.xcuserstate
+
+# macOS generated files
+*.DS_Store
+
+# JetBrains IDEs
+.idea/
+*.iml
+
+# Visual Studio Code
+.vscode/
+
+# Watchman
+.watchmanconfig
+
+# Yarn specific files
+.yarn/
+.yarn-integrity
+.yarnrc
+
+# Environment files
+.env
+.env.local
+.env.development
+.env.test
+.env.production
+
+# TypeScript cache (if you use TypeScript)
+*.tsbuildinfo
+
+# Expo credentials and configuration
+*.expo-go
+*.expo-private
+
+# Logs and temporary files
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Bundled JavaScript and source maps
+web-build/
+web/
+
+# npm & yarn related files
+package-lock.json
+yarn.lock
+
+# React Native cache
+.expo/web/cache/
+metro-cache/
+.expo/package-lock.json
+
+# Ignore macOS specific system files
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Thumbs.db
+Thumbs.db
+
+# Windows
+*.sln
+*.suo
+*.psess
+*.vcxproj*
+*.vcxproj.filters
+
+# Expo Router specific (if applicable)
+.expo-router/
+
+# Fastlane (if applicable)
+fastlane/report.xml
+fastlane/Preview.html
+fastlane/screenshots
+fastlane/test_output
+fastlane/metadata/android/*
+fastlane/metadata/ios/*
+
+# Derived Data (Xcode)
+ios/build
+ios/DerivedData
+
+# Package Manager
+.pnpm
+*.tsbuildinfo
+
+# Gradle
+.gradle
